yolo_heads_l_small_eugene

--- a/yolo_head_training/Makefile
+++ b/yolo_head_training/Makefile
@@ -51,6 +51,13 @@ yolo_heads_m_large_medium_albu_augs_eugene:
     dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/large \
     num_gpus=4 multi_gpu=DDP
 
+
+yolo_heads_l_small_eugene:
+	python train.py --config-name=yolo_heads_l_small_eugene \
+    dataset_params.train_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
+    dataset_params.val_dataset_params.data_dir=/home/bloodaxe/data/VGGHead/small \
+    num_gpus=4 multi_gpu=DDP
+
 yolo_heads_m_small_eugene_grid_search:
 	python train.py --config-name=yolo_heads_m_small_eugene \
     training_hyperparams=vgg_head_train_params \
