--- a/yolo_head_training/configs/dataset_params/vgg_head_large.yaml
+++ b/yolo_head_training/configs/dataset_params/vgg_head_large.yaml
@@ -114,39 +114,38 @@ train_dataset_params:
     - KeypointsBrightnessContrast:
         brightness_range: [ 0.8, 1.2 ]
         contrast_range: [ 0.8, 1.2 ]
-        prob: 1.0
+        prob: 0.5
 
     - KeypointsHSV:
         hgain: 20
         sgain: 20
         vgain: 20
-        prob: 1.0
+        prob: 0.5
 
-    - KeypointsRandomAffineTransform:
+    - MeshRandomAffineTransform:
         max_rotation: 45
         min_scale: 0.5
         max_scale: 2.0
         max_translate: 0.1
         image_pad_value: 127
         mask_pad_value: 1
-        prob: 1.0
-        interpolation_mode: [ 0, 1, 2, 3, 4 ]
+        prob: 0.35
+        interpolation_mode: [0, 1, 2, 3, 4]
 
-    - KeypointsRandomRotate90:
-        prob: 1.0
+    - MeshRandomRotate90:
+        prob: 0.2
 
     #    - KeypointsMosaic:
     #        prob: 0.5
 
-    - KeypointsLongestMaxSize:
+    - MeshLongestMaxSize:
         max_height: ${dataset_params.image_size}
         max_width: ${dataset_params.image_size}
 
-    - KeypointsPadIfNeeded:
+    - MeshPadIfNeeded:
         min_height: ${dataset_params.image_size}
         min_width: ${dataset_params.image_size}
-        image_pad_value: [ 127, 127, 127 ]
-        mask_pad_value: 1
+        image_pad_value: [127, 127, 127]
         padding_mode: center
 
     - KeypointsImageStandardize:
@@ -165,15 +164,14 @@ val_dataset_params:
     - split_00000
     - split_00001
   transforms:
-    - KeypointsLongestMaxSize:
+    - MeshLongestMaxSize:
         max_height: ${dataset_params.image_size}
         max_width: ${dataset_params.image_size}
 
-    - KeypointsPadIfNeeded:
+    - MeshPadIfNeeded:
         min_height: ${dataset_params.image_size}
         min_width: ${dataset_params.image_size}
         image_pad_value: 127
-        mask_pad_value: 1
         padding_mode: bottom_right
 
     - KeypointsImageStandardize:
