Fp16->fp32, lower LR

--- a/yolo_head_training/configs/yolo_heads_l_large_eugene.yaml
+++ b/yolo_head_training/configs/yolo_heads_l_large_eugene.yaml
@@ -39,6 +39,7 @@ dataset_params:
   train_dataloader_params:
     persistent_workers: True
     batch_size: 4
+    num_workers: 16
 
   val_dataloader_params:
     persistent_workers: True
