--- a/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
+++ b/yolo_head_training/configs/training_hyperparams/vgg_head_train_params.yaml
@@ -10,7 +10,7 @@ lr_warmup_epochs: 1
 initial_lr: 3e-4
 lr_mode: cosine
 cosine_final_lr_ratio: 0.1
-max_epochs: 200
+max_epochs: 50
 
 zero_weight_decay_on_bias_and_bn: True
 batch_accumulate: 1
@@ -36,13 +36,13 @@ optimizer: AdamW
 optimizer_params:
   weight_decay: 0.000001
 
-ema: False
+ema: True
 ema_params:
   decay: 0.9997
   decay_type: exp
   beta: 50
 
-mixed_precision: False
+mixed_precision: True
 sync_bn: False
 
 valid_metrics_list:
