--- a/yolo_head_training/configs/yolo_heads_m_large_orest.yaml
+++ b/yolo_head_training/configs/yolo_heads_m_large_orest.yaml
@@ -12,6 +12,11 @@ ckpt_root_dir: /work/okupyn
 multi_gpu: On
 num_gpus: 4
 
+training_hyperparams:
+  ema: True
+  visualization_frequency_epochs: 1
+  max_epochs: 50
+
 experiment_suffix: ""
 experiment_name: ${hydra:runtime.choices.arch_params}_${hydra:runtime.choices.dataset_params}_${experiment_suffix}
 
@@ -32,11 +37,11 @@ dataset_params:
 
   train_dataloader_params:
     persistent_workers: True
-    batch_size: 20
+    batch_size: 16
 
   val_dataloader_params:
     persistent_workers: True
-    batch_size: 20
+    batch_size: 16
 
 
 hydra:
